syntax = "proto3";

option csharp_namespace = "CoreDrivenArchitecture.Grpc";

package vehicles;

service Vehicle {
  rpc Create (CreateVehicleRequest) returns (CreateVehicleResponse);
  rpc Get (GetVehicleRequest) returns (GetVehicleResponse);
}

message CreateVehicleRequest {
  string name = 1;
  string make = 2;
}

message CreateVehicleResponse {

}


message GetVehicleRequest {
  int32 id = 1;
}

message GetVehicleResponse {
  int32 id = 1;
  string name = 2;
  string make = 3;
}
